wsdf/tests/should_fail/unknown_wsdf_attr.stderr
error: unrecognized attribute
 --> tests/should_fail/unknown_wsdf_attr.rs:6:8
  |
6 | #[wsdf(foo = "bar")] // Unknown meta item
  |        ^^^^^^^^^^^
